--- a/Obi/Obi/UserControls/TransportBar.resx
+++ b/Obi/Obi/UserControls/TransportBar.resx
@@ -176,94 +176,113 @@
   <data name="mNextPhrase.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAA8hJREFUWEftlG1I
-        U1EYx3snaYoULU1XloYDlVpqEKbNWupQxrWZBqGYvWjRLFiYk9KlWet1ka2ybOW2tIwFQYy+mH2ZvVBD
-        P+iH0pA02+6mcy9u6lVP59zaLNl29VNfduHh3rHf85z/8z/POQsW+B+/A34H/A7MOLASfkbAWANjyRyM
-        mS9PWTIqLX03SN6543pgYCAT0sEwFvrImi9PKWATEqBUNToyszIGWAmsApjBgLHcSyYpoFHx2In4hG0J
-        BQEBAb543wKCgoLIgujBjQZQWnrCkcHd85rJZG6n0Wh0mL347wp0Oj1yhsdJnstNfx0XF7c9JCRk9Wye
-        sn0Gg+EuaLNbweTkJHj3Xktge3n2XRx2TWxsbGRUVFSQqxD89srv3pNaHR8fHxkdHR1IubALgMo3ujoy
-        DRuB2TIEnGNOMDY+BmR3bjmzeBnfUlOT+SwWa21MTMyyxMREH3wdyXM4qfykpCSSpxSSkpKywSXAbBkG
-        IxYzGLGaweiojXTjx+AAOHykCBbmvuBwOay0tDSPvN0Dz+VxWdnZ2avEYvEir0IwDIuAw0TOwKBhAOjx
-        QaA36gFu0gPjkAG4Cr95+4bI2Zdt5WFZosysdJJHQi22EWC1WQDaPhTIuampKdAGeX4OZsUwnig/P38D
-        m832fMQLCwsj8vbzfw+hyQAXxYFpGCff6Lfe+BMMmU3k/9/7vwPE5ubt9ckPjwy5ecQeOJBbJhAI3HP0
-        jxtCoXB90aECMsECO7HCLlCgztCWjDpGYUdoMNuJkuNHrEePFpUfLMqfA68lio8dthYXHzpTVlYWDrfB
-        swMSiWSdoPQYWXAc2jc+MQ7G0BDCQFYajTiovVTtEJ4+pa4QV2xB/AlBiW/+4nnIn1Sfqz63WSqVBkPY
-        +8Umk8kY5RWnyYKTsNMJYoJ8EwQBXr166aysEvWKxWcxhUJBr6+vXyqXyxlnRELvfKWot6Zmhqc8BSqV
-        Krymtup3R7D76elp0NP7lbh6XWK/fLVW3NLSsg4uvsJVSK1Wh1dfqJzFfyGuXLuE+KrZPKUAjUYTLr15
-        mSxos9tA8zOVo+6OVKNUyre2tbUFzz5Cra2tYTekM3zTU6WjTibVNDc3sjzxlALa29vD7jfcBp91Hx0P
-        5ff6G1XyPK1WS+/q6vJ4iXR0dITVP6gDn3QfHA0P7/YrlY9zdTrdam88pYDu7u7QJ82PwHP1E0lPTw+j
-        s7PTbben5L6+vlBVk9zN6/V6nzylABzHaQaDYY3ZbEbT6v3G+lMJMjS73T5nnlKAH/A74HfgfznwC9nJ
-        NV6OGyhzAAAAAElFTkSuQmCC
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAABShJREFUWEftlltQ
+        lGUYxzd3l+OCaIoomjFmWFA2OkUcdABFDVE5SEgcRBRBijMLQbAsJ8cR1MGxzFQ0QERy2WVhFxZEHK1I
+        yUkZNPCcXXRVF00ByeS/5/n4uMgLjrfszH92hu99/8/v+b8P77cSycxnJoEpJuCRIYN7pjRoitunv40B
+        IspcB70yZWpye2n6jpN0YIDuJy3Irto66KmU6VerJVaTtJjecga4+bQVXY90ONy875lXlrzPLUuyeHqu
+        k9jNAF2PG1HZlYX2vrM4c1X9r2+OzR8emTL3SdhMfSkDfPdQgy+uJeLolThobx9Gw80KbClyHPBIl8ZM
+        3Zl2sjl1MjCmaM3VBxeo+B6Ud0Sh7FIEzl7PgaHnBKIOvU1zIT0aGiqRTgmEAVrvnBSi7eirwuX+anT2
+        16Dz3jlcuVc7ovu1BFCPQx3RONAehv2m7Sg1BRPQXhh6v0R65QYezs7V2ZLZk4YQAO5+hfzmjSgw+KPQ
+        uAXFLYEoaQ0Siuw3hWB/26iC6e+BKGrZBrUxACrDByhtDYHu9hGUaqOGvZTyp25K8+WTgmAAw53j+LTR
+        B7lN6wUQNi4wbEZhSwCKTATUtgUlpOK2ABSa/FHQugn5xg20fh3t80au3hfV3Soc70h97ptr+6dnhsxv
+        whAM0Nz7OTK1nsjSrRUMc5p8kWdcD1WLHwpMG6Bu30TaKKigzQ95rT5Ia1yFhG+cEVu7FLtqliKudjkq
+        aEa+/j4fAUWLBjyV8rQJQTCAvucoUjXvIk3jhgytO7L1XsgxrkWeyRt5bd5QXfLBZ+1rkGpwRazGATvq
+        rPHhOQtsrzJH8BkzBJ6SY+uJEXEjdd2lCC9/Y8AzU2YYF4IBNLfKsPe8M/ZdcEFywztI0a1Est4VSU0r
+        sE/vhFjdfERqrBHRQNJY4aOLVgi/YImwWoKothAgtp0cAeBGqq6rEFa2fJAA+iYEUH1DJWxmk+Cz5git
+        saAuLYVCkVprRDeS9ArsJPF3lG4EJLzeCmHnLUeSqDQXZufY5Y+xudB+gN4bByby3pjFCYwCBFWaUUfm
+        gikXj6LiO5sU2GWwQWzLiHYZbRDTTCCNCkRSIuH1loios8ORq9E4aIx87pOj+NstWRpFxWXjdc9vNbNR
+        AO4+hLrns+XOuHOhOBXd3WaLuEuzBe1pt8Vuky1iCIoh4psccao7Cbn1/sOemfLfXXfIvMnXhmQ+XgJ8
+        c1mMAtT8qELtTwWou61Gfa8aF38uhKa/CNr7RdA9LEbjo2J8cm0B4jvtBBCGUF52QfUtJRJOuf3jkS67
+        6/ieZCV5zifxhcRvzDFvR35oKVzFE1DDo3yk/OCAxG/nIOGKHUqur0VNj5KGbdkgRW6wmSdxJj9HEcBO
+        BBjzGGaJMXFcL5McSEtIy0grSG+RVpHcaKCGGh7nI717IZK65uFYbyhO30zGJrX90OpYWTmteY20lLSI
+        NE9MwHK8I+AZkYukHBlvXEh6RYTgjlxIKwWAJyrk9ixD1cN4VFyLpmGz/mtFkDROLP6q2L09fc8hWYve
+        XGPMjzCIL0BwEvxjg005jdcZQP9LCbS/5kGl9x9eozT7zWmdcN06kTg1BueztyMpRM/xav/vOZ8VR8bH
+        wSacxgISR7rYSykb1D4oQeJp9yGPDPkNBxfJm+IzhuXC3LWt2MjUXssiDoNYkDhCNmSYuTykgaVLnr2f
+        Iq1UKCQc81zxGa/hjnnPtAq/GBcfDQ8pAwl3hXuyPEUsxP/ffGxckNfMfGYSmHAC/wE/O8pTPep2nAAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <data name="mPrevPhraseButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAA19JREFUWEftlftL
-        U2EYx70kW6ANYVIkMm+1XxIMJabibVZzW42lTodIzJZTR46yEqMpSorzDmngnJeiTLJ+lfzFoAtUVv9C
-        iVHb3Kae6dnZznG+ve8xr+wa/bgXHsbe5/M+z/f5nvdsYWGhFXIg5EDIgX9z4Ag8dgJGIozYAEoEy3st
-        GY4aRsdGn8kvyDVcFBQB+D3Zh4BgeZ+zHIVZTmbmWaX4ksA0PmFw/hVwysupfbzQOPl4nPDDe20eCTPH
-        k5KS8gTF59803r2JY9gaQEt8uZiEuZRDJ4PlfU7NYjAY3LyC3N7SMin+9dvCJlxgA18Hbrfbk4Bgea/N
-        mTCTkJ6eVikSF/80jOkJl8sFCKcDrKzZYFgPCwiW99o4Ambi4uPjecXCC7P1apXDZDYCapOip8bsq2AN
-        BmZf2y8gNUj+8CPbFRPFZrNPFxUVtiO73394u4lsdrqcwL5hh4EB+zoGMDq2BUiuiKnCovz2MpkUfwd5
-        9HjWIbtsNQOz1QjMFhMwLRuByWKk+ZJSCclkMj2/NSwWK1YiET0orygBaGq0LCvL4Lf5FyxkpItabMvA
-        CvesKxa6IGIr5KV7vM3sk6+6KqdgH88CMjIyotLS0pIrK8vb6uqv4wtfPkEH4ETQetRwFVuhJ0duoL2t
-        rS2gqr1GyavK2+rVNZD/7JevrVOSHA4nyde1j4BC2AIB/9wNTd2srrvDYbNZAX3zHRsAh+F0EsBFumgB
-        t243kEj0Nq+e1fV0+uQb72hILpfrUwAtTigUMrKysuJrapTy+9qmpddzswRFUQAFuhMURdICtK3NJI/H
-        S0xNTaV5pVIh17Y0L8154Vva7tF8AD/d24hEIomRSoUprW3Nut6BLvzH4vdN95YbOuCkBXR1d5B8Pp+z
-        UzAnJydGKOSnQGG6/kEdvniI1/Uc5AMSIpPJIqEjcRqNOrtvQDf/4uUUThAO+pI+HOojRSLRrgBUcI/X
-        ZA8M6uZnXk1Dntjmh/sPCA5IwA6kUCiYcrn8ZE9Pp0I/NmxcWPhI6A1DAO55tHQ/bxh/RPOjhmGvfKBi
-        wlUqFUur1XInnupHnj2fANXV1Qm+/g0R39TUxJ18MjoyNT3pjw9Mx8zMTGRDQ0OcWq1OgJ/H/J1CjyUY
-        3l+9UD7kQMiB/+rAH5Q36FKOwIWXAAAAAElFTkSuQmCC
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAABTtJREFUWEftlGlQ
+        E2cYx6PZyBFARNC2IK1QW4cqo04VIYAWHHVKUTQgcp9WBO+EoLQUNAERKXiA2KKIgIiBGK6UI4EkgFqr
+        tR71RHR6fmtnOh2bjm39933XheFDO0HsMP3AzvxnZ3af9/n/nmOXxxu/xjvwgh1YLOWv85EweME0ozo+
+        QZTO5EZ/7GlakiEcW4DlUp7QV8a0SipWmnofNCAw037sALxkPBdfmeBuUWvqk54HZ3HhoXrsAHykjHdA
+        pt3PtRfz/zL2n0H5BQn6BurHBkAk4ceFyF0fd9ysgO7uKZSf34HSnlT0EoBlmfZ/jmqLRnQohzdRJGOK
+        Ew8tNPXcV6L161J8en47yno3o8SYgt4HSrYD9EswpxH5DQ8SyXi2ZNO7MqqCTX0DKpz9Mg/H+rbiaG8a
+        a37IkIzzAw0shLG/Dob+0+i+Xw3dvVPovFuBjjvH0Xb7EwJ9FCIpY3ouAN8dlm6iDMGjIk0Ku2wVF2Ws
+        6RHjRhw2bMBBfSKKuuNQ2BWF/dpw5HWIsbdtNbI1QfiwZTl2Nb2DdLUvdqi80HKz9PkAfKXM0oDdtr+c
+        7Ml62nG7HCU9KSjWJ3CKR5E+FkWGGBTqI1HQHY78LjEU2tXY0x6ELM0KZDYHQtboD8k5b2xXLUTzjZKR
+        A4gkgpRVcuff6i8XQnWtEAd0USjQRqBAF4kDXZGsaaGBaj0KDGHI14uR1x0CuS4IOZ0rkdW2DLtalkKi
+        9iHVL8KW+vkE4DDIF/TE7AhEMsHZqMI5ps7blTj5+S7I20OgaF+D3I612KcVk0pDsV8figIjuRvXIt8Y
+        guyuQKS3vY0tLR7Y1OiOjSo3pDTMQmq9BzGfhzSlJ5puHGQX1CyAt5T/XfTBOSb1tWJ2wbI177Iz3dP2
+        HhSdwcjtWoU8fTA+0Pphq2Y2EhodEXVOiCiVNSIbrBGhtEZ4nRXCaiwhPmWBkBOTEHrCDsqr+0YGEBbG
+        45NtLV6Z4/j4SPcmdqkiKqchvtYZiUpnxCmJYb0taxjTKERssw3iiOg9tkmIaLWQBVnPQayttMDqcgGq
+        v/hoEIBvtgs0wHsnP3bJbuvH+1ojnhYb4hBRY491py1JhVaIJhXHNtkgvtUGCZ/ZIrHtmRI0tohrsUEM
+        BxF+xgqh1RZYUzFpOIAlSW8WYiIJslwQz/iJ0gU/yepW/HH80ja8r57BVs6aE7Okdjska+2wQTeZVVKn
+        HRIICIWgnaDjoNBi0oWay0MdsCG5Lcx1gSEB1kSTXf14HiIJcyu5bP7vVVczkK71ZCtP6nhmvFFvj6ZH
+        cjQ9lKNxQA51/16o7u1Fw509UN7KQd31HNR+lY2aK0MAdiSvFREt8l+vIQAS4TR5Om+m1xa+OnT/a6bK
+        qxIoLgRiA6k8xWCP1L4paP5GYfYXPPiLpkWNBIDOiM6K0k4lepnIdUESo1ieNdV07NImlF6PQFqfEzZf
+        dEDr97mDC+ZD4hYRLSCaSzSbyJ1oBtFLXC5bLre5KfAEJEJIZE+7QPQK0aseYn70kgyrXwt0659W3U9D
+        +hVXaH4cAphHYjyJ3iJ6kzN35Qpw5KqnozW7hJRuAtEkDoK2jSagVbjM9Gf8RVLBtzJlwBPlowxofhgC
+        eIO8n0XkRmGJnImmc5XTHCM2H94eug90aWjraDcoyHQnd97rPjsFhviyuSa6hNxfzoUzpSObxhnTM4Ob
+        T4sa9TW4F3QsFIZW5OC1jSlepXAxcQAO5NkU7h2NoeB0lC9k/E/ENCEFot0RLN7GD+cAqBl9Rj+x/9x0
+        1K0bP/i/78DfuFbaKWzgiKEAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="mNextSectionButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAABFRJREFUWEftle9P
-        W1UYx2EamQk/poJuxK5ASzDB2nRKJGPWUmtL13UCpaykDrDYyoodEIQqFsc2WEXG2CIjY2yIwrboixnj
-        jPHVnC+mM+o/oGKiHWNtoe29lxZ2S4/nOaXQdRThja/6JE+a3udznvs93/Pk3KSkRCQcSDiQcCDswOM4
-        c3A+hfPhDZiyWf4J3JOPMz8q4f9jkXfx5YpX0Esv7xlIS0t7Bj/chjN5HSGb4ZNTU1MLoX9s4v55kXfk
-        Q3Fi8tOAal+ZQyQSHsSFnTi3xhFB+M8mxjfCb8nMzNxVUbmfRlEhV0gp3Jt3nwCoO11O1Nxi8ZeVvfod
-        l8vdjYEncT4UI4QIgHC5/5NfEbC0tIRcs06yLq4AmvGhYDCIfrx1M1ip2c/sEe/uSUlJgbNLjxKxImAD
-        /OYEuOdcyOObRYGFAFpYXEDDw0MBlbrsL6Hw2WosgIMzBQYp4sAq74/HPxo5gg054PHNIa/Pg7yUB83P
-        09gNFk3fuY2MRkNAoZR9uYOz4wWY6IiAaJ5Z5m9H8ds524uysrJEMAMgYM47G30EK0PIx8NHCtN3HWjG
-        OY1mXDPI6Ya8i8KNg+j7G9fZKm05LZGK31ftUxAehPpoL6JoH6IZiiQ4By+78cN1VlP1Gi2VST7UVlcy
-        8Aw4COVeOZWRkREWkJ6ezj+g05ACvBAGxT3nJL/wf8Z1B8163KT+j+NvBGz1gcp1+chOgQe2rl6PQqEl
-        5F4eQrwRCg95LhHA4XB4hoZa0tCHFVJ4F5CwM7B43j+PdxREP926yTYeMtI6XVXnG4aDG+LfanyTrtFr
-        7eYmIxMKhZCP8pJ1dfWvUwUFBWEBfD6fZzl8iBQWsX2L9xbRAgwhTjI4bhfqPXE0cLi56apCrdglEAjy
-        3rY0rsv39HZj3nxVrpI/X1paKmzraKZBABwPhLnJRBUXF+cQAUVFRXnvdr5DCkG8U5a9R86cZVn09Tdf
-        BWxdHVMGQ51GJBJlFxYWPgK89b22Nflr1zBvs04ZjXWakpKSbIlEsrWiokLYdaSTXETQG6Ld2kpJpVIu
-        ESAWi3OP9x4J7wjvHpT+OfUH2z9gZ2y2jmMymSwPN0uL3APAH+v5IIb/nf3o5AmmE/MqlWqF7+7u3lJT
-        o3mur7+XOAADDXH0eNeqALlcnjt4uo8UGIZGV76Y9A+c6fu2qcn0olqtzoQm0TchfpZ7anCVv/z5hH/g
-        9No8rK2vrxcMnR0kAuDegDh5yk7hPnDdJyWVl5fnnL8whH797Wf/6MVhh72vR6/T6bKVSiVcOg8EruWM
-        jH6MfsH8+dGzDrs9Pg8CWltbBWPjI/d9C86NnKFqa2vDAhoaGriXrnyCLowN91ssFp5er4drN+7XEPjJ
-        y2NobPxcf3t7Ow+vWY9Pttls+ROXLqLYxOueJgJMJlOG2Wzm4N9MrVYb++F5wIHN8i0tLdva2tq40Wm1
-        WncuC1/L5MSzhAMJB/4/B/4Fq0fqBCA7rg8AAAAASUVORK5CYII=
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAABNZJREFUWEftlmtM
+        U2cYx8/WFkpbEYo3dGMOM8VdnJlDpS0Fb0O3TIYiTodu6gpFYFza0rJClambiUtcmPMyptVeuIiUlqtG
+        RdQ5byC7KM4Sk33Zt+3Dlgji7b/3ORSyuA9FV7Is8SS/NO95n+f5/5/3vOc95bgn1/9hBRQ6IdRFITzx
+        BjFo7I/EzZw4YL2RWHtPJdpu2HH8ZyuOdleg+doeNP70Jdw/fAHX95+j9sp2VHduhf2SBfNM0v5ZRm50
+        wA2UtS5FSeMbMHoSUOiai9zamdBWT8d65/NYY5uEtAPhsJ43ItEkvR1wA6d7qkAGSpuS/mFggzN6wMD+
+        sP/WQOr+0JEzQHvA3yNIqZCMsIGWt2FuXIQitxoFdXOQc/hVZFbFDOyBQxORvC9o5Ayc8jqxqfktfNy4
+        kBmIZwZm8wYyqqZhnWMy3rVGYOk+0UgacMDSvATFDfOhr1ci78jr2FjzCjMwFe/bo/DO1+LAGBg6YPTC
+        XgVDqRPeo3ttXjv/Bpg8idDVK5BXNwvZtS9DUx2N1ANSJFeIeOg1TDBKwXLvUD6P7+Aa1rmgKBRlFXzz
+        5t12bzXavZU45XXg5A0bDy2/qVENvWcuCtyvQXN4MlbYJFh+KJhn2cFgODstcHRY+APJftEC24VSJG+N
+        6lfqRfnDMkBBSoNgz87GnP6GH8ux7dgylLHNV9qcBHPzfJiaVMjzzMCaGjnSKsVYWRUyBI1XOMRItQUz
+        YzLs/nYjNHtj+1QGgXPY4hQ4K4MTJZjEHYfOlN1zXN6ETS1LUNq6EObWBGS6JmNVtQSrDodgda0E7x1h
+        1Emwmv3SeFXNgKEdp9NgqU+5rzQIrz/Wd0Gh58YtKpH/7urc+WD3OS1Kjs2D1h3NC5Nger0Uaz2MBtkQ
+        a9xSpLukKG1TY9fZTKiN4j8UOu65R+r+78FxBaLZyz+d0td09St8cnIxE2fCTGCtR4YPmmRY1zIK64/6
+        aB3FjwtOxMDWZcASy9jeOJ0w6bHFBxOVOtGHmbsVvfauYmgaJvDdktCGY6HQHA9FxsnRPBpGdlsknN16
+        pJfH3FIahWX/WnzIhEFg/cia0FdxRYv1LeG8OIlq28OQdTYcG4kzcliva2GsXXBHZRSdYLlPBczAS5u5
+        IFWRsGtbU9q98s6V0JwYEM8+F47cC3LkXpRjV/cylH+39oHKKPw1oJ/iwS7i87nIxGLJb3vPZ+GzywuQ
+        dSYMOeflyOuIwPZuJZzX9Zhnlt2aow+aEbDOHy4UVyhULLaM6XVeNaL00kzegLlrKup+MSNl+7O34vWC
+        9JEQf5oVFTGCGZI5uaL8tB3RvTVeE4ovxaDmph5aa2yfQiewsvlRDCnF+eIpj/If+RoUDWGZMkYYI4Ix
+        jhE5N0/gyjkYd9t9cwu2tCbfVelF18TjuWg2N4nmfXEUT3mUT3WGbYbEg3xdhLJfua/gRPYbxYgOknMv
+        KnSinuwDivvxReI/x8/g5rP70xkv0LwvjuLJMOVTHVoVquv37aAAckuuaUnDGWMZExjPMOhkmxIZy6np
+        KzdtKf/cYxhT6b5vnuIonvIon+pQPQFj2NfDj4H+ZlM3Y3ydkQAt9yA0po5pnuIonvYD7R0S9tu5P2dU
+        gExRMSGDVomWdBAa032af6yN58/Ak/kRWYG/AKJVyFspBdikAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="mPrevSectionButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAABC5JREFUWEftle9P
-        W1UYx0dmUkxYGw1Eo5RS6OCFYQQyDARloaaFFleB8qMMpq1ioWVVWuxqDYiOZW03QLexDFrYzBQXf7xE
-        3Yv5QmMWLfFf0M1Eb0sLtJde2t5LOZ5z7lpKKdSpL/skT27OOZ/7PN/zPae3hw5lI+tA1oGsA6wDT8IU
-        wTyalGiM5jPFYxB4GmYxzCcywXA9LS+SNr0EUjMvL++5AwrmoIaIOXHihTn0LhyX/Fv+KCqQHNImMZmf
-        n1+9T8HH4XxRdXWlpuXlJs/8gjPyUAByMF0k8TJi4YZrD58Q4FtdwTr2EXAYVn9KKOS/2CyTfG8yD1OB
-        YADzLSebabhWmtJ9Dx/ch/8nAngcDqcM2u1QdrRSy7+6t2CAELUBYrFYOgGPxCcE+Pc6wIG74ldVHeuR
-        n2z6wzk/G45GoyAc2QRrgVWY/lQBj8pj0/AlRLEeXEscQUFBQVVhYeHzzXLJ0qCuP0x4CMBsMXjXQXId
-        BGAGyUCyAFEy78nMs0fG5XJFMrkUNyZDJH7K5JKQRCKebFe+Qv340w9byOZINILXyVAQkBtBEMTJClC0
-        tTBiccO4soPl0fFsQHbF7wVePwG8Pg/wrBDA4yMw365U0Lm5ueyvhs/nl3Z0teHG/nU/fnbCcVd3OyC8
-        BB771lbAX94/YSECF0WX1Q/n/Gs+XBCx3Sol8MT5Ve+BfN+rKobH47ECRCJRqVrTt8uB19S9oVN9XZcG
-        dW9SbvfP0AG4I2g9aoiOCe0cuYHmtre3gXbgdUZ1qmNcp9dS7uXM/MDgG7RAIBBiATU1NSVDZwawAJqh
-        8VM/pCUbGxsr5XLJ8TMG3dIF+7mwf9UP8M3fDAEKZiQSBlE6igUYRwx0RUVFiVwuP254W7dks08cyJve
-        eYsuLy9nBTQ0NAjPWky7BJgtRrKtra1SJpNx6urqnu0f0HS/N3r2wbd3lsIMwwCU6E4wUDASMPr+u3Rt
-        bW0xdJPl+zXdo2OWB9/d+SYtP/aBFfNYgFQqFX44MYoFoIuD4tzEGNnTozwW/7AoFIojUEzp2LjFdmna
-        Rv1+/7et2HYMOhDBAmyO87RYLBbE+fr6+iNwDHmrbeojO3U/hbdfTOJbW1uLJ6dt7GWDlwfF1LSdVKvV
-        Fclfts7OzsNQRMHQ8FDd9MeOu198tUiFw5uYv3J1kob2JwSg9+L8MOIvX7z75de3d/iZqR3BsFHx7NwV
-        XCges87LpNFo3CUgLgbyuSqV6hmH4/zpufkZ4hf3vcic6yqAc6ylKZHgJy+cdi1cI9zL9yJO18wOr9Vq
-        iz5dXACpaTab9/tzQS1yDAYD12q1ln1yy3X9s89vAI1Gw08n4OFcTm9vL9dkMpXdvOW8vnj75g5vsVh4
-        MItGRkYE8URjNH9AQbyEbIbv5Ov1ej4S9H/zmepl17MOZB34zw78DfBR59+fU2JKAAAAAElFTkSuQmCC
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAABNRJREFUWEftVmtM
+        m1UY/mZboAVkwAgu4sYugMtuJiQgtENgOhcwjgURxwrOcUcuAqV0dEA3htlEg5fAssHKRVYoDMr9EkqZ
+        4JBljiXTSRBEf/jTH0tcmZDh43lLSeaiQov8W5Mn39v3+pz3e79zDsc9/VnZgd0qziYwj3/IyvC1h4nl
+        vNpX5CIEygSZa89mYQZxriAluuxFY8u3ZThU6PIgUMYPtTCF9e7iPP6BMJW7UXOzBLXjClQaMhGkEN4P
+        yLbdaX3WVUYG5XAvBCtE99WjBfh4KBYJmp34/KsknOs4tijO48365nNOq0xluZuvihOJ5fyp8r7UxSvf
+        5CFNuweJGi/EX92Oqhs5yKoNmWd2Q1QUx7M8+8oRG1jrO5SaiPlrdy4gVxfACOxFUqM33mvYyjrhhZrx
+        U5CW7zKyL+PTldNZ6CGW8QsTvvCb6/6uAkU9h5Hd6of3m/cxAj4mAtK6zUjV7oZ6LB/hZ9yNkhxenIUl
+        /t09UMYLjyjdYuy6W4EyvRTy9gMmAunN+80EPE0EotUuTO+PiuF0hJyyfyCRCfzXTEIst/UJUTr+3nq7
+        HJdvZEPZ9dp/EjhaJUJh92Gc75FCLBf85i/nPKwmQRPNVv9rzejpP7UTpVD1vvE3Ak++AupAxGU7HLlk
+        w74QKRRNYY8kefx7NLwWk6BJZsN0/ULHiYWe7ytROhCJ4p5wFHS9CnmHBDk6P2S27kdKiw/imzwR2/Ac
+        ItUiHKkS4M1LAkRWO+DiaDoSL/r+QcPLCGywiATb2T7LvBL6cGiqHp8Y4lDSHwFVXxiUvQeh6JZA1u2H
+        rM6XkKbzRpzWDVFfCvFWvS0ia21xVG2DiGoBYmrdUT0mQ+T5bUaJjK9aNQGJjBcT/ZH33Mi0FiMzzRia
+        qsPglBqG6ToUDRxEwYAE8j4/pHZux/FmBxzTCvEOQ3SjEG9r7NB4pxiaiWJcvV2EhltFqB8vZNu161yA
+        nBexKhKBuXwEyYUIzncwIUThsEhPw0wtivWhUOrFSO7ygLTNHlKdGUw+3ipCTIsI2rsqdkDxIc7lL7D2
+        PyRQTsKqCDzp5JvECSjYMFuD4uFgpPR64N1OB5zoZuhxXAKTSRfbbo/meyoq/ujlD+w8JQrOeRkB2ZzQ
+        KgIUtERAjYz+HaaCJ/scET/wLBIGl0Ay6ch2bfIM2Krn/9dzgQgM/FRpKkDFEvVOSB52Qsr1jSaQTDqy
+        tU6dXR8CuqkPcbLf0VSIiqZ97Yz0sSWQTDqytf24TgS0k6eRrN+EZIMT0kadkTHugqxbriaQTDqytU2v
+        E4GmSSVS9G6mdtOKM26yvX9ikwkkk45sunUgwKcZaPpBieRBNySxVaaObGStd0EmK0wgmXRkW+7A1te5
+        zWx+7Rj41kw/XSoo2JHBhQjQdLey96ubOYv22RJ0/FyCzl/OmUAy6chGPuz4XnDdw+1ise4Ub85D+VZ1
+        WSEn+mbpeuXG8PzyRmLJ096d28tiPSnenIfyUd5nVuoIHRzLq3dlMrVyCwNdOmlV+xh8Gei8D2SQmJ/0
+        n/RkJz/ypziKpzzUTZuVij9uJ6a25kBKQO2k1VDSbQw7GLweA/0nPdnJb7n99kwWMFh2Iv4DUyJEr4eS
+        0UqoS9RSAslElvQ0dOS75oKWdOupr9Ud+AstZbtQo2wKdgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="mRecordButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -293,10 +312,51 @@
         AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="mRewindButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAA19JREFUWEftlftL
+        U2EYx70kW6ANYVIkMm+1XxIMJabibVZzW42lTodIzJZTR46yEqMpSorzDmngnJeiTLJ+lfzFoAtUVv9C
+        iVHb3Kae6dnZznG+ve8xr+wa/bgXHsbe5/M+z/f5nvdsYWGhFXIg5EDIgX9z4Ag8dgJGIozYAEoEy3st
+        GY4aRsdGn8kvyDVcFBQB+D3Zh4BgeZ+zHIVZTmbmWaX4ksA0PmFw/hVwysupfbzQOPl4nPDDe20eCTPH
+        k5KS8gTF59803r2JY9gaQEt8uZiEuZRDJ4PlfU7NYjAY3LyC3N7SMin+9dvCJlxgA18Hbrfbk4Bgea/N
+        mTCTkJ6eVikSF/80jOkJl8sFCKcDrKzZYFgPCwiW99o4Ambi4uPjecXCC7P1apXDZDYCapOip8bsq2AN
+        BmZf2y8gNUj+8CPbFRPFZrNPFxUVtiO73394u4lsdrqcwL5hh4EB+zoGMDq2BUiuiKnCovz2MpkUfwd5
+        9HjWIbtsNQOz1QjMFhMwLRuByWKk+ZJSCclkMj2/NSwWK1YiET0orygBaGq0LCvL4Lf5FyxkpItabMvA
+        CvesKxa6IGIr5KV7vM3sk6+6KqdgH88CMjIyotLS0pIrK8vb6uqv4wtfPkEH4ETQetRwFVuhJ0duoL2t
+        rS2gqr1GyavK2+rVNZD/7JevrVOSHA4nyde1j4BC2AIB/9wNTd2srrvDYbNZAX3zHRsAh+F0EsBFumgB
+        t243kEj0Nq+e1fV0+uQb72hILpfrUwAtTigUMrKysuJrapTy+9qmpddzswRFUQAFuhMURdICtK3NJI/H
+        S0xNTaV5pVIh17Y0L8154Vva7tF8AD/d24hEIomRSoUprW3Nut6BLvzH4vdN95YbOuCkBXR1d5B8Pp+z
+        UzAnJydGKOSnQGG6/kEdvniI1/Uc5AMSIpPJIqEjcRqNOrtvQDf/4uUUThAO+pI+HOojRSLRrgBUcI/X
+        ZA8M6uZnXk1Dntjmh/sPCA5IwA6kUCiYcrn8ZE9Pp0I/NmxcWPhI6A1DAO55tHQ/bxh/RPOjhmGvfKBi
+        wlUqFUur1XInnupHnj2fANXV1Qm+/g0R39TUxJ18MjoyNT3pjw9Mx8zMTGRDQ0OcWq1OgJ/H/J1CjyUY
+        3l+9UD7kQMiB/+rAH5Q36FKOwIWXAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="mFastForwardButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAA8hJREFUWEftlG1I
+        U1EYx3snaYoULU1XloYDlVpqEKbNWupQxrWZBqGYvWjRLFiYk9KlWet1ka2ybOW2tIwFQYy+mH2ZvVBD
+        P+iH0pA02+6mcy9u6lVP59zaLNl29VNfduHh3rHf85z/8z/POQsW+B+/A34H/A7MOLASfkbAWANjyRyM
+        mS9PWTIqLX03SN6543pgYCAT0sEwFvrImi9PKWATEqBUNToyszIGWAmsApjBgLHcSyYpoFHx2In4hG0J
+        BQEBAb543wKCgoLIgujBjQZQWnrCkcHd85rJZG6n0Wh0mL347wp0Oj1yhsdJnstNfx0XF7c9JCRk9Wye
+        sn0Gg+EuaLNbweTkJHj3Xktge3n2XRx2TWxsbGRUVFSQqxD89srv3pNaHR8fHxkdHR1IubALgMo3ujoy
+        DRuB2TIEnGNOMDY+BmR3bjmzeBnfUlOT+SwWa21MTMyyxMREH3wdyXM4qfykpCSSpxSSkpKywSXAbBkG
+        IxYzGLGaweiojXTjx+AAOHykCBbmvuBwOay0tDSPvN0Dz+VxWdnZ2avEYvEir0IwDIuAw0TOwKBhAOjx
+        QaA36gFu0gPjkAG4Cr95+4bI2Zdt5WFZosysdJJHQi22EWC1WQDaPhTIuampKdAGeX4OZsUwnig/P38D
+        m832fMQLCwsj8vbzfw+hyQAXxYFpGCff6Lfe+BMMmU3k/9/7vwPE5ubt9ckPjwy5ecQeOJBbJhAI3HP0
+        jxtCoXB90aECMsECO7HCLlCgztCWjDpGYUdoMNuJkuNHrEePFpUfLMqfA68lio8dthYXHzpTVlYWDrfB
+        swMSiWSdoPQYWXAc2jc+MQ7G0BDCQFYajTiovVTtEJ4+pa4QV2xB/AlBiW/+4nnIn1Sfqz63WSqVBkPY
+        +8Umk8kY5RWnyYKTsNMJYoJ8EwQBXr166aysEvWKxWcxhUJBr6+vXyqXyxlnRELvfKWot6Zmhqc8BSqV
+        Krymtup3R7D76elp0NP7lbh6XWK/fLVW3NLSsg4uvsJVSK1Wh1dfqJzFfyGuXLuE+KrZPKUAjUYTLr15
+        mSxos9tA8zOVo+6OVKNUyre2tbUFzz5Cra2tYTekM3zTU6WjTibVNDc3sjzxlALa29vD7jfcBp91Hx0P
+        5ff6G1XyPK1WS+/q6vJ4iXR0dITVP6gDn3QfHA0P7/YrlY9zdTrdam88pYDu7u7QJ82PwHP1E0lPTw+j
+        s7PTbben5L6+vlBVk9zN6/V6nzylABzHaQaDYY3ZbEbT6v3G+lMJMjS73T5nnlKAH/A74HfgfznwC9nJ
+        NV6OGyhzAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="mDisplayTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>168, 22</value>
-  </metadata>
-  <metadata name="tmTrackBar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>293, 22</value>
   </metadata>
 </root>
