--- a/README
+++ b/README
@@ -20,11 +20,19 @@ What's where:
 + Obi
   A 2005 project for the application. This is the main project.
 
++ dist
+  Distribution(s) of Obi as published on the Urakawa website. Probably not
+  the right place to keep these, so this directory may disappear.
+
 + docs
   Mostly outdated, features.txt contains the rough feature list of version
   0.5/1.0/future of the application. Also some notes from the application
   team meeting in Delhi in August 2006 and initial comments for the façade
-  API (facade-api.txt)
+  API (facade-api.txt) Also contains some specs, e.g. for the transport bar
+  (version 0.7)
+
++ images
+  Images used by the application and/or the help file.
 
 + prototype
   Contains the two prototypes/mockups that were delivered in April. Protobi
