--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -571,4 +571,10 @@ Do you want to replace the project contained in this file?</value>
   <data name="Stopped" xml:space="preserve">
     <value>Stopped.</value>
   </data>
+  <data name="export_unsaved_caption" xml:space="preserve">
+    <value>Exporting project with unsaved changes</value>
+  </data>
+  <data name="export_unsaved_text" xml:space="preserve">
+    <value>You are about to export a project with unsaved changes. The project will be automatically saved before export if you click OK. Press cancel to cancel export (your project will not be saved.)</value>
+  </data>
 </root>
