--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -592,4 +592,7 @@ Do you want to replace the project contained in this file?</value>
   <data name="copy_strip_command_label" xml:space="preserve">
     <value>copy strip</value>
   </data>
+  <data name="playback_rate" xml:space="preserve">
+    <value>Playback rate x{0}</value>
+  </data>
 </root>
