--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -235,7 +235,7 @@ Do you want to replace the project contained in this file?</value>
     <value>&amp;Redo</value>
   </data>
   <data name="rename_command_label" xml:space="preserve">
-    <value>rename node</value>
+    <value>rename section</value>
   </data>
   <data name="undo" xml:space="preserve">
     <value>&amp;Undo</value>
